--- a/src/app/api/admin/descriptor.html
+++ b/src/app/api/admin/descriptor.html
@@ -16,7 +16,5 @@
 
 -->
 <section>
-  <pre class="prettyprint">
-		  <code class="language-js">{{apiDescriptorCtrl.api | json}}</code>
-		</pre>
+  <pre>{{apiDescriptorCtrl.api | json}}</pre>
 </section>
