--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -138,3 +138,14 @@ table[md-data-table]>thead:not([md-table-progress])>tr>th>div {
 .gravitee-sticky {
   background-color: #fff;
 }
+
+v-pane-header {
+  legend {
+    border-bottom: none;
+    margin-bottom: 0;
+  }
+
+  ng-md-icon {
+    top: 4px;
+  }
+}
