fix: remove regex for context path

--- a/src/app/api/admin/general/apiGeneral.html
+++ b/src/app/api/admin/general/apiGeneral.html
@@ -91,7 +91,7 @@
         </div>
 
         <v-accordion id="gateway-accordion" class="vAccordion--default" multiple>
-          <v-pane>
+          <v-pane expanded>
             <v-pane-header>
               <legend><ng-md-icon icon="settings"></ng-md-icon> HTTP Configuration</legend>
             </v-pane-header>
@@ -125,8 +125,8 @@
               </div>
             </v-pane-content>
           </v-pane>
-          
-          <v-pane>
+
+          <v-pane expanded>
             <v-pane-header>
               <legend><ng-md-icon icon="security"></ng-md-icon> SSL Configuration</legend>
             </v-pane-header>
