--- a/src/app/api/admin/general/apiGeneral.html
+++ b/src/app/api/admin/general/apiGeneral.html
@@ -81,7 +81,7 @@
         <div layout-gt-sm="row">
             <md-input-container class="md-block" flex-gt-sm>
               <label>Gateway context path *</label>
-              <input ng-model="apiCtrl.api.proxy.context_path" type="text" required>
+              <input ng-model="apiCtrl.api.proxy.context_path" type="text" ng-pattern="/^\/[\/.a-zA-Z0-9-]+$/" required>
             </md-input-container>
 
             <md-input-container class="md-block" flex-gt-sm>
