--- a/src/app/api/dialog/api.dialog.html
+++ b/src/app/api/dialog/api.dialog.html
@@ -62,7 +62,7 @@
                 <div layout-gt-sm="row">
                   <md-input-container class="md-block" flex-gt-sm>
                     <label>Context path *</label>
-                    <input ng-model="api.proxy.context_path" type="text" required>
+                    <input ng-model="api.proxy.context_path" type="text" ng-pattern="/^\/[\/.a-zA-Z0-9-]+$/" required>
                   </md-input-container>
 
                   <md-input-container class="md-block" flex-gt-sm>
