fix: use correct property

--- a/src/app/api/admin/general/apiGeneral.html
+++ b/src/app/api/admin/general/apiGeneral.html
@@ -163,7 +163,7 @@
                 <div flex-xs flex="50">
                   <md-input-container flex="50">
                     <label>PEM certificate</label>
-                    <textarea ng-model="apiCtrl.api.proxy.http.ssl.certificate"></textarea>
+                    <textarea ng-model="apiCtrl.api.proxy.http.ssl.pem"></textarea>
                   </md-input-container>
                 </div>
               </div>
