fix: fixed schema form to avoid NPE on arrays

--- a/src/app/api/admin/analytics.html
+++ b/src/app/api/admin/analytics.html
@@ -79,7 +79,7 @@
 
       <md-divider></md-divider>
 
-      <md-card-content style="background-color: #fff; border: 1px solid #e7eaec">
+      <md-card-content style="border: 1px solid #e7eaec">
         <chart config="chartConfig"></chart>
       </md-card-content>
     </md-card>
