--- a/src/app/api/admin/members.html
+++ b/src/app/api/admin/members.html
@@ -15,39 +15,41 @@
     limitations under the License.
 
 -->
-<md-data-table-container class="application-data-table" ng-show="apiCtrl.members.length > 1">
-  <table md-data-table class="md-primary">
-    <thead md-order="order">
-      <tr>
-        <th name="Member" order-by="user"></th>
-				<th name="Role" order-by="type"></th>
-				<th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="member in apiCtrl.members | filter: { type: '!primary_owner' } | orderBy: order">
-        <td ng-switch="member.type">
-					<span ng-switch-when="primary_owner"><b>{{member.user}}</b></span>
-					<span ng-switch-default>{{member.user}}</span>
-				</td>
-        <td ng-show="member.type != 'primary_owner' && apiCtrl.isOwner() && member.user != apiCtrl.authenticatedUser.principal.username">
-					<md-select ng-model="member.type" placeholder="Other" ng-change="apiCtrl.updateMember(member)">
-		        <md-option ng-value="type" ng-repeat="type in apiCtrl.membershipTypes">{{type}}</md-option>
-		      </md-select>
-				</td>
-				<td ng-hide="member.type != 'primary_owner' && apiCtrl.isOwner() && member.user != apiCtrl.authenticatedUser.principal.username">
-					<span><b>{{member.type}}</b></span>
-        </td>
-        <td>
-					<div ng-if="member.type != 'primary_owner' && apiCtrl.isOwner() && member.user != apiCtrl.authenticatedUser.principal.username">
-						<ng-md-icon ng-click="apiCtrl.showDeleteMemberConfirm($event, member)" icon="delete" size="24" style="cursor: pointer;"></ng-md-icon>
-					</div>
-				</td>
-      </tr>
-    </tbody>
-  </table>
-</md-data-table-container>
+<div layout-padding>
+  <md-table-container ng-show="apiCtrl.members.length > 1">
+    <table md-table>
+      <thead md-head md-order="order">
+        <tr md-row>
+          <th md-column order-by="user">Member</th>
+          <th md-column order-by="type">Role</th>
+          <th md-column></th>
+        </tr>
+      </thead>
+      <tbody md-body>
+        <tr md-row ng-repeat="member in apiCtrl.members | filter: { type: '!primary_owner' } | orderBy: order">
+          <td md-cell ng-switch="member.type">
+            <span ng-switch-when="primary_owner"><b>{{member.user}}</b></span>
+            <span ng-switch-default>{{member.user}}</span>
+          </td>
+          <td md-cell ng-show="member.type != 'primary_owner' && apiCtrl.isOwner() && member.user != apiCtrl.authenticatedUser.principal.username">
+            <md-select ng-model="member.type" placeholder="Other" ng-change="apiCtrl.updateMember(member)">
+              <md-option ng-value="type" ng-repeat="type in apiCtrl.membershipTypes">{{type}}</md-option>
+            </md-select>
+          </td>
+          <td md-cell ng-hide="member.type != 'primary_owner' && apiCtrl.isOwner() && member.user != apiCtrl.authenticatedUser.principal.username">
+            <span><b>{{member.type}}</b></span>
+          </td>
+          <td md-cell>
+            <div ng-if="member.type != 'primary_owner' && apiCtrl.isOwner() && member.user != apiCtrl.authenticatedUser.principal.username">
+              <ng-md-icon ng-click="apiCtrl.showDeleteMemberConfirm($event, member)" icon="delete" size="24" style="cursor: pointer;"></ng-md-icon>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </md-table-container>
 
-<md-button class="md-fab md-fab-bottom-right gravitee-add-button" aria-label="Add" ng-click="apiCtrl.showAddMemberModal($event)">
-  <ng-md-icon icon="add"></ng-md-icon>
-</md-button>
+  <md-button class="md-fab md-fab-bottom-right gravitee-add-button" aria-label="Add" ng-click="apiCtrl.showAddMemberModal($event)">
+    <ng-md-icon icon="add"></ng-md-icon>
+  </md-button>
+</div>
