--- a/src/app/api/apisTableMode.html
+++ b/src/app/api/apisTableMode.html
@@ -17,37 +17,37 @@
 -->
 <md-card>
 	<md-card-content>
-		<md-data-table-container ng-init="apisCtrl.list()">
-			<table md-data-table>
-				<thead md-order="order">
-				<tr>
-					<th name="Visibility" order-by="visibility"></th>
-					<th name="Name" order-by="name"></th>
-					<th name="Version" order-by="version"></th>
-					<th name="Context path" order-by="proxy.context_path"></th>
-					<th name="State" order-by="state"></th>
-					<th></th>
-				</tr>
+		<md-table-container ng-init="apisCtrl.list()">
+			<table md-table>
+				<thead md-head md-order="order">
+          <tr md-row>
+            <th md-column order-by="visibility">Visibility</th>
+            <th md-column order-by="name">Name</th>
+            <th md-column order-by="version">Version</th>
+            <th md-column order-by="proxy.context_path">Context path</th>
+            <th md-column order-by="state">State</th>
+            <th md-column></th>
+          </tr>
 				</thead>
-				<tbody>
-					<tr ng-repeat="api in apisCtrl.apis | orderBy: order" title="{{api.description}}" ui-sref="apis.portal({apiId: api.id})">
-						<td>
+				<tbody md-body>
+					<tr md-row ng-repeat="api in apisCtrl.apis | orderBy: order" title="{{api.description}}" ui-sref="apis.portal({apiId: api.id})">
+						<td md-cell>
 							<ng-md-icon icon="{{apisCtrl.getVisibilityIcon(api)}}"></ng-md-icon>
 						</td>
-						<td>{{api.name}}</td>
-						<td>{{api.version}}</td>
-						<td>{{api.proxy.context_path}}</td>
-						<td>
+						<td md-cell>{{api.name}}</td>
+						<td md-cell>{{api.version}}</td>
+						<td md-cell>{{api.proxy.context_path}}</td>
+						<td md-cell>
 							<ng-md-icon ng-if="api.state === 'started'" icon="blur_on" size="32" style="fill: green;" title="Started"></ng-md-icon>
 							<ng-md-icon ng-if="api.state !== 'started'" icon="blur_off" size="32" style="fill: red;" title="Stopped"></ng-md-icon>
 						</td>
-						<td ng-click="$event.stopPropagation()">
+						<td md-cell ng-click="$event.stopPropagation()">
               <md-tooltip md-direction="left">Manage this API</md-tooltip>
 							<ng-md-icon icon="settings" ui-sref="apis.admin.general({apiId: api.id})" aria-label="{{api.id}}"></ng-md-icon>
 						</td>
 					</tr>
 				</tbody>
 			</table>
-		</md-data-table-container>
+		</md-table-container>
 	</md-card-content>
 </md-card>
