--- a/src/app/application/applicationsTableMode.html
+++ b/src/app/application/applicationsTableMode.html
@@ -17,22 +17,22 @@
 -->
 <md-card>
 	<md-card-content>
-		<md-data-table-container ng-show="applicationsCtrl.applications.length > 0">
-			<table md-data-table>
-				<thead md-order="order">
-				<tr>
-					<th name="Name" order-by="name"></th>
-					<th name="Type" order-by="type"></th>
+		<md-table-container ng-show="applicationsCtrl.applications.length > 0">
+			<table md-table>
+				<thead md-head md-order="order">
+				<tr md-row>
+					<th md-column order-by="name">Name</th>
+					<th md-column order-by="type">Type</th>
 				</tr>
 				</thead>
 				<tbody>
-				<tr md-auto-select ng-repeat="application in applicationsCtrl.applications | orderBy: order"
-						title="{{application.description}}" ui-sref="applications.portal.general({applicationId: application.id})">
-					<td>{{application.name}}</td>
-					<td>{{application.type}}</td>
-				</tr>
+          <tr md-row md-auto-select ng-repeat="application in applicationsCtrl.applications | orderBy: order"
+              title="{{application.description}}" ui-sref="applications.portal.general({applicationId: application.id})">
+            <td md-cell>{{application.name}}</td>
+            <td md-cell>{{application.type}}</td>
+          </tr>
 				</tbody>
 			</table>
-		</md-data-table-container>
+		</md-table-container>
 	</md-card-content>
 </md-card>
